--- a/pets.html
+++ b/pets.html
@@ -1,21 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Pet Selector</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" 
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" 
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pick a Pet by Chaithanya Reddy Pailla</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .border {
+            padding: 10px;
+            font-size: 20px;
+            font-weight: bold;
+            text-align: center;
+            background-color: #f8f9fa;
+        }
+    </style>
 </head>
-<body>
-  <h1>Pick a pet by Chaithanya Reddy Pailla</h1>
+<body class="container">
+    
+    <h1 class="text-center mt-3">Pick a Pet by Chaithanya Reddy Pailla</h1>
 
+    <!-- Row for Letters -->
+    <div class="container mt-4">
+        <div class="row text-center">
+            <div class="col-sm-2 border">P</div>
+            <div class="col-sm-2 border">A</div>
+            <div class="col-sm-2 border">I</div>
+            <div class="col-sm-2 border">L</div>
+            <div class="col-sm-2 border">L</div>
+            <div class="col-sm-2 border">A</div>
+        </div>
 
+        <!-- Row for Pet Names -->
+        <div class="row text-center mt-3">
+            <div class="col-md border">Persian Cat</div>
+            <div class="col-md border">African Grey Parrot</div>
+            <div class="col-md border">Indian Star Tortoise</div>
+            <div class="col-md border">Labrador Retriever</div>
+            <div class="col-md border">Leopard Gecko</div>
+            <div class="col-md border">Akita Dog</div>
+        </div>
+    </div>
 
+    <!-- Explanation Section -->
+    <div class="mt-4">
+        <h3>Which row breaks first?</h3>
+        <p>When resizing the browser, the pet names row breaks first. This happens because the pet names are longer and require more space to display properly, while the single letters fit comfortably in small screen sizes.</p>
+    </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
