--- a/pets.html
+++ b/pets.html
@@ -14,6 +14,15 @@
             text-align: center;
             background-color: #f8f9fa;
         }
+        .image-container {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        .thumbnail img {
+            width: 150px; /* Smaller size for thumbnails */
+            height: 150px;
+            object-fit: cover;
+        }
     </style>
 </head>
 <body class="container">
@@ -48,7 +57,43 @@
         <p>When resizing the browser, the pet names row breaks first. This happens because the pet names are longer and require more space to display properly, while the single letters fit comfortably in small screen sizes.</p>
     </div>
 
+    <!-- Pet Images Section -->
+    <h1 class="text-center mt-5">Pet Images</h1>
+
+    <!-- Full-sized Images -->
+    <div class="container image-container">
+        <h3>Full-Sized Images</h3>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="pet1.jpg" class="img-fluid" width="450" height="450" alt="Persian Cat">
+            </div>
+            <div class="col-md-4">
+                <img src="pet2.jpg" class="img-fluid" width="450" height="450" alt="Akita Dog">
+            </div>
+            <div class="col-md-4">
+                <img src="pet3.jpg" class="img-fluid" width="450" height="450" alt="Indian Star Tortoise">
+            </div>
+        </div>
+    </div>
+
+    <!-- Thumbnails -->
+    <div class="container image-container">
+        <h3>Thumbnails</h3>
+        <div class="row">
+            <div class="col-md-4 thumbnail">
+                <img src="pet1.jpg" class="img-thumbnail" alt="Persian Cat">
+            </div>
+            <div class="col-md-4 thumbnail">
+                <img src="pet2.jpg" class="img-thumbnail" alt="Akita Dog">
+            </div>
+            <div class="col-md-4 thumbnail">
+                <img src="pet3.jpg" class="img-thumbnail" alt="Indian Star Tortoise">
+            </div>
+        </div>
+    </div>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
