--- a/pets.html
+++ b/pets.html
@@ -91,7 +91,59 @@
             </div>
         </div>
     </div>
-
+      <!-- Bootstrap Table -->
+    <div class="container mt-5">
+      <h2 class="text-center">Pet Information Table</h2>
+      <table class="table table-striped table-hover table-bordered">
+          <caption>Pets, Rivers, and Cities</caption>
+          <thead class="table-dark">
+              <tr>
+                  <th scope="col">Letter</th>
+                  <th scope="col">Pet</th>
+                  <th scope="col">River</th>
+                  <th scope="col">City</th>
+              </tr>
+          </thead>
+          <tbody>
+              <tr>
+                  <td>P</td>
+                  <td>Persian Cat</td>
+                  <td>Parana River</td>
+                  <td>Paris</td>
+              </tr>
+              <tr>
+                  <td>A</td>
+                  <td>African Grey Parrot</td>
+                  <td>Amazon River</td>
+                  <td>Atlanta</td>
+              </tr>
+              <tr>
+                  <td>I</td>
+                  <td>Indian Star Tortoise</td>
+                  <td>Indus River</td>
+                  <td>Islamabad</td>
+              </tr>
+              <tr class="table-warning">
+                  <td>L</td>
+                  <td>Labrador Retriever</td>
+                  <td>Lena River</td>
+                  <td>London</td>
+              </tr>
+              <tr>
+                  <td>L</td>
+                  <td>Leopard Gecko</td>
+                  <td>Limpopo River</td>
+                  <td>Los Angeles</td>
+              </tr>
+              <tr class="table-info">
+                  <td>A</td>
+                  <td>Akita Dog</td>
+                  <td>Amur River</td>
+                  <td>Amsterdam</td>
+              </tr>
+          </tbody>
+      </table>
+  </div>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
