--- a/pets.html
+++ b/pets.html
@@ -144,6 +144,34 @@
           </tbody>
       </table>
   </div>
+
+   <!-- Buttons and Button Groups Section -->
+   <div class="container mt-4">
+    <h2 class="text-center">Button Groups</h2>
+
+    <!-- Button Toolbar -->
+    <div class="btn-toolbar justify-content-center" role="toolbar" aria-label="Button Toolbar Example">
+        
+        <!-- First Button Group: Success Buttons (Pets with images) -->
+        <div class="btn-group me-2" role="group" aria-label="Success Buttons">
+            <button type="button" class="btn btn-success">P</button> <!-- Persian Cat -->
+            <button type="button" class="btn btn-success">L</button> <!-- Labrador Retriever -->
+            <button type="button" class="btn btn-success">I</button> <!-- Indian Star Tortoise -->
+        </div>
+
+        <!-- Second Button Group: Alert Buttons -->
+        <div class="btn-group me-2" role="group" aria-label="Alert Buttons">
+            <button type="button" class="btn btn-warning">A</button>
+            <button type="button" class="btn btn-warning">L</button>
+        </div>
+
+        <!-- Third Button Group: Danger Button -->
+        <div class="btn-group" role="group" aria-label="Danger Button">
+            <button type="button" class="btn btn-danger">A</button>
+        </div>
+
+    </div>
+</div>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
