--- a/pets.html
+++ b/pets.html
@@ -155,13 +155,13 @@
         <!-- First Button Group: Success Buttons (Pets with images) -->
         <div class="btn-group me-2" role="group" aria-label="Success Buttons">
             <button type="button" class="btn btn-success">P</button> <!-- Persian Cat -->
-            <button type="button" class="btn btn-success">L</button> <!-- Labrador Retriever -->
+            <button type="button" class="btn btn-success">A</button> <!-- Labrador Retriever -->
             <button type="button" class="btn btn-success">I</button> <!-- Indian Star Tortoise -->
         </div>
 
         <!-- Second Button Group: Alert Buttons -->
         <div class="btn-group me-2" role="group" aria-label="Alert Buttons">
-            <button type="button" class="btn btn-warning">A</button>
+            <button type="button" class="btn btn-warning">L</button>
             <button type="button" class="btn btn-warning">L</button>
         </div>
 
