--- a/pets.html
+++ b/pets.html
@@ -172,6 +172,17 @@
 
     </div>
 </div>
+ <!-- Dropdown Menu -->
+ <div class="dropdown mt-4">
+  <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+      Choose a Page
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <li><a class="dropdown-item" href="basic.html">Basic Page</a></li>
+      <li><a class="dropdown-item" href="advanced.html">Advanced Page</a></li>
+  </ul>
+</div>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
