--- a/pets.html
+++ b/pets.html
@@ -182,6 +182,24 @@
       <li><a class="dropdown-item" href="advanced.html">Advanced Page</a></li>
   </ul>
 </div>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-md navbar-light bg-light">
+  <a class="navbar-brand" href="pets.html">Pet Options</a>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+              <a class="nav-link active" href="basic.html">Basic</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link active" href="advanced.html">Advanced</a>
+          </li>
+      </ul>
+  </div>
+</nav>
+
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
