--- a/pets.html
+++ b/pets.html
@@ -223,6 +223,48 @@
   <!-- Submit Button -->
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+<h1 class="text-center mt-3">Meet Our Pets</h1>
+
+<!-- Cards Section -->
+<div class="row">
+    <!-- Card 1 -->
+    <div class="col-md-4">
+        <div class="card">
+            <img src="pet1.jpg" class="card-img-top" alt="Pet 1">
+            <div class="card-body">
+                <h5 class="card-title">Buddy</h5>
+                <p class="card-text">Buddy is a playful golden retriever who loves outdoor adventures.</p>
+                <a href="https://www.akc.org/dog-breeds/golden-retriever/" class="btn btn-primary" target="_blank">Learn More</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Card 2 -->
+    <div class="col-md-4">
+        <div class="card">
+            <img src="pet2.jpg" class="card-img-top" alt="Pet 2">
+            <div class="card-body">
+                <h5 class="card-title">Whiskers</h5>
+                <p class="card-text">Whiskers is a curious and friendly cat who enjoys napping in the sun.</p>
+                <a href="https://www.catster.com/cat-breeds/" class="btn btn-primary" target="_blank">Learn More</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Card 3 -->
+    <div class="col-md-4">
+        <div class="card">
+            <img src="pet3.jpg" class="card-img-top" alt="Pet 3">
+            <div class="card-body">
+                <h5 class="card-title">Coco</h5>
+                <p class="card-text">Coco is a charming parrot that loves mimicking sounds and singing.</p>
+                <a href="https://www.thesprucepets.com/parrot-species-390566" class="btn btn-primary" target="_blank">Learn More</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
 
 <!-- Bootstrap JS -->
