--- a/pets.html
+++ b/pets.html
@@ -223,50 +223,47 @@
   <!-- Submit Button -->
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
 <h1 class="text-center mt-3">Meet Our Pets</h1>
 
 <!-- Cards Section -->
 <div class="row">
-    <!-- Card 1 -->
+    <!-- Persian Cat Card -->
     <div class="col-md-4">
         <div class="card">
-            <img src="pet1.jpg" class="card-img-top" alt="Pet 1">
+            <img src="pet3.jpg" class="card-img-top" alt="Persian Cat">
             <div class="card-body">
-                <h5 class="card-title">Buddy</h5>
-                <p class="card-text">Buddy is a playful golden retriever who loves outdoor adventures.</p>
-                <a href="https://www.akc.org/dog-breeds/golden-retriever/" class="btn btn-primary" target="_blank">Learn More</a>
+                <h5 class="card-title">Persian Cat</h5>
+                <p class="card-text">The Persian cat is known for its long, luxurious fur and calm personality.</p>
+                <a href="https://www.thesprucepets.com/persian-cat-breed-profile-554382" class="btn btn-primary" target="_blank">Learn More</a>
             </div>
         </div>
     </div>
 
-    <!-- Card 2 -->
+    <!-- Akita Dog Card -->
     <div class="col-md-4">
         <div class="card">
-            <img src="pet2.jpg" class="card-img-top" alt="Pet 2">
+            <img src="pet1.jpg" class="card-img-top" alt="Akita Dog">
             <div class="card-body">
-                <h5 class="card-title">Whiskers</h5>
-                <p class="card-text">Whiskers is a curious and friendly cat who enjoys napping in the sun.</p>
-                <a href="https://www.catster.com/cat-breeds/" class="btn btn-primary" target="_blank">Learn More</a>
+                <h5 class="card-title">Akita Dog</h5>
+                <p class="card-text">Akita dogs are strong, loyal, and intelligent, known for their protective nature.</p>
+                <a href="https://www.akc.org/dog-breeds/akita/" class="btn btn-primary" target="_blank">Learn More</a>
             </div>
         </div>
     </div>
 
-    <!-- Card 3 -->
+    <!-- Indian Star Tortoise Card -->
     <div class="col-md-4">
         <div class="card">
-            <img src="pet3.jpg" class="card-img-top" alt="Pet 3">
+            <img src="pet2.jpg" class="card-img-top" alt="Indian Star Tortoise">
             <div class="card-body">
-                <h5 class="card-title">Coco</h5>
-                <p class="card-text">Coco is a charming parrot that loves mimicking sounds and singing.</p>
-                <a href="https://www.thesprucepets.com/parrot-species-390566" class="btn btn-primary" target="_blank">Learn More</a>
+                <h5 class="card-title">Indian Star Tortoise</h5>
+                <p class="card-text">The Indian Star Tortoise is a unique reptile with a stunning star-patterned shell.</p>
+                <a href="https://nationalzoo.si.edu/animals/indian-star-tortoise" class="btn btn-primary" target="_blank">Learn More</a>
             </div>
         </div>
     </div>
 </div>
-
-
-
-
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
