--- a/basic.html
+++ b/basic.html
@@ -8,5 +8,6 @@
 </head>
 <body class="container">
     <h1 class="text-center mt-3">Welcome to the Basic Page</h1>
+    <a href="pets.html" class="btn btn-primary">Back to Pets</a>
 </body>
 </html>
